--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "command-line-args": "^5.1.1",
-    "command-line-usage": "^5.0.5"
+    "command-line-usage": "^5.0.5",
+    "toml": "^3.0.0"
   },
   "bin": {
     "demo": "./index.js"
