--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
+    "child_process": "^1.0.2",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^5.0.5",
-    "toml": "^3.0.0"
+    "detect-port": "^1.3.0",
+    "fs": "0.0.1-security",
+    "get-port": "^5.0.0",
+    "path": "^0.12.7",
+    "readline-sync": "^1.4.9",
+    "sync-rpc": "^1.3.4",
+    "toml": "^3.0.0",
+    "util": "^0.12.1"
   },
   "bin": {
     "demo": "./index.js"
