--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "command-line-usage": "^5.0.5",
     "detect-port": "^1.3.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
     "path": "^0.12.7",
     "readline-sync": "^1.4.9",
