--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
+    "line-reader": "^0.4.0",
     "path": "^0.12.7",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.9",
     "sync-rpc": "^1.3.4",
     "toml": "^3.0.0",
