--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
+    "html-to-text": "^5.1.1",
     "line-reader": "^0.4.0",
+    "lodash": "^4.17.15",
+    "markdown-pdf": "^9.0.0",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.9",
+    "remarkable-classy": "0.0.1",
     "sync-rpc": "^1.3.4",
+    "through": "^2.3.8",
     "toml": "^3.0.0",
     "util": "^0.12.1"
   },
