--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
     "html-to-text": "^5.1.1",
+    "js-yaml": "^3.13.1",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.15",
     "markdown-pdf": "^9.0.0",
