--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "detect-port": "^1.3.0",
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
+    "html-to-text": "^5.1.1",
     "js-yaml": "^3.13.1",
+    "log-symbols": "^3.0.0",
+    "mustache": "^3.0.3",
     "path": "^0.12.7",
     "readline-sync": "^1.4.9",
-    "util": "^0.12.1"
+    "remarkable": "^2.0.0",
+    "util": "^0.12.1",
+    "word-wrap": "^1.2.3"
   },
   "bin": {
     "demo": "./index.js"
