--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "readline-sync": "^1.4.9",
     "remarkable": "^2.0.0",
+    "traverse": "^0.6.6",
     "util": "^0.12.1",
     "word-wrap": "^1.2.3"
   },
